BUGFIX: featured images centered on mobile
Former-commit-id: 683b4140e15eb7c2c703eba657b0ca3319ba2f2f

--- a/WWW/assets/css/main.css
+++ b/WWW/assets/css/main.css
@@ -2857,7 +2857,7 @@
                 }
 
             .post > .image.featured {
-                margin-left: -1.5em;
+                /* margin-left: -1.5em; */
                 margin-top: calc(-1.5em - 1px);
                 width: calc(100% + 3em);
             }
